import cookies-js

--- a/sobitas-store/package.json
+++ b/sobitas-store/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.11.17",
     "joi": "^17.13.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "15.0.3",
